# simpliciality-testing

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  README.md  README.rst  SimplicialTest.py  is_simplicial.py  pyproject.toml  requirements.txt  sample.py  setup.py  tox.ini  utils.py  validators.py
build_tools/travis/: install.sh
datasets/: 00_degs.txt  00_sizes.txt  01_sizes.txt  02_degs.txt  02_sizes.txt  crime_degs.txt  diseasome_degs.txt  diseasome_sizes.txt  multiple_small_test_cases.pickle  pollinators_degs.txt  pollinators_sizes.txt
docs/: conf.py  deploy.sh  index.rst
docs/dataset/: benchmark.rst  format.rst  pollinator.rst
docs/src/: Test.rst  cores.rst  draw.rst  enumeration.rst  sample.rst
docs/usage/: baby-steps.rst  cutoff.rst  depth.rst  enumerate-and-sample.rst  enumerate-simplicial-complexes.rst  go-recursive.rst  installation.rst  usage-and-options.rst  verbose.rst  width.rst
figures/: README.rst
simplicial_test/: Test.py  __init__.py  cm_count.py  custom_exceptions.py  draw.py  enumeration.py  mongo.py  sample.py  utils.py  validators.py
tests/: __init__.py  test_batch_datasets.py  test_empirical_data.py  test_is_simplicial.py  test_not_simplicial.py  test_simplicial.py
utils/: is_simplicial.py
